# sim-is-more

./: .gitattributes  .gitignore  build_tables.sh  check_custom_envs.py  configure.sh  default_training.json  fbnet_cached_metrics.json  get_cell_latencies.ipynb  hwnats_api.py  pareto_visu.py  paretoindices.csv  prova.py  pyproject.toml  requirements.txt  scripts.sh  test.py  test_random_policy.py  train.py  utils.py
commons/: __init__.py  genetics.py  utils.py
commons/interfaces/: __init__.py  base_fast_interface.py  base_interface.py  hw_nats_fast_interface.py  nats_fast_interface.py  nats_interface.py
commons/tables/: __init__.py  build_hw_nats_dataset.py  build_nas101_dataset.py  build_nats_dataset.py
custom_env/: HW_freerenas_env.py  HW_nas_env.py  HW_recombination_env.py  __init__.py  base_env.py  freerenas_env.py  marcella.py  marcella_plus.py  nas_env.py  oscar.py  recombination_env.py  renas_env.py  render.py  reward.py  reward_eval_framework.ipynb  reward_test.py  utils.py
policy/: __init__.py  eval_callbacks.py  history_wrapper.py  hybrid_callbacks.py  multitask_callbacks.py  policy.py  pure_callbacks.py  switchdevice_callback.py
searchspaces/: nats_blocks.json  nats_interface_syntheticdevices_lookuptable.json
src/: __init__.py  default_training.json  genetics.py  utils.py
src/interfaces/: __init__.py  base_interface.py  fbnet_interface.py  hwnats_api.py  nats_interface.py  utils.py
src/network_utils/: __init__.py  genotypes.py  infercell.py  make_tinynets.py  operations.py  tiny_network.py
tests/: test_nats.py
wandb/: latest-run
(+14 files in other folders)
