[tool.poetry]
name = "oscar"
version = "0.1.0"
description = "Extension of my MSc Thesis @ PoliTo, 2022-2023. Hardware-Aware NAS with Deep Reinforcement Learning"
authors = ["fracapuano <francesco_capuano@aol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stable-baselines3 = "^2.2.1"
gymnasium = "^0.29.1"
torch = "^2.1.2"
tensorboard = "^2.15.1"
wandb = "^0.16.1"
sb3-contrib = "^2.2.1"
rich = "^13.7.0"
SciPy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
