[tool.poetry]
name = "oscar"
version = "0.1.0"
description = "HW-NAS via MetaRL on Synthetic Devices"
authors = ["fracapuano <francesco_capuano@aol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stable-baselines3 = "^2.3.2"
torch = "^2.3.1"
tqdm = "^4.66.4"
rich = "^13.7.1"
sb3-contrib = "^2.3.0"
scipy = "^1.14.0"
wandb = "^0.17.3"
pygame = "^2.6.0"
tensorboard = "^2.17.0"
numpy = "1.26.4"
moviepy = "^1.0.3"
imageio = "^2.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
